--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.profiles.active=test
+
+jwt.secret=SUA_CHAVE_SECRETA_MUITO_LONGA_E_SEGURA_COM_NO_MINIMO_64_CARACTERES_BASE_64_MAIS_O_SUFICIENTE_PARA_PREENCHER_512_BITS_QUE_E_O_REQUISITO_MINIMO
+jwt.expiration=86400000
